--- a/cap_interp/cap_interp.tex
+++ b/cap_interp/cap_interp.tex
@@ -360,7 +360,7 @@ ou, equivalentemente, $p(x) = x^3+2x^2-x+1$.
 % octave
 %%%%%%%%%%%%%%%%%%%%
 \ifisoctave
-No \verb+GNU Octave+, podemos fazer as contas acima da segunte forma:
+No \verb+GNU Octave+, podemos fazer as contas acima da seguinte forma:
 \begin{verbatim}
 x = [-1,0,1,3]';
 y = [3,1,3,43]';
@@ -467,7 +467,7 @@ Assim, temos:
 % octave
 %%%%%%%%%%%%%%%%%%%%
 \ifisoctave
-No \verb+GNU Octave+, podemos fazer as contas acima da segunte forma:
+No \verb+GNU Octave+, podemos fazer as contas acima da seguinte forma:
 \begin{verbatim}
 x = [0 1 2 3]';
 y = [0 1 4 9]';
